--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.13.2",
     "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
     "nodemailer": "^7.0.10",
