--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^7.0.10",
     "technicalindicators": "^3.1.0",
     "telegraf": "^4.16.3",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "yahoo-finance2": "^3.10.1"
   }
 }
